--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "negotiator": "^1.0.0",
+    "node-fetch": "^3.3.2",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
     "once": "^1.4.0",
